--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,7 @@ upstream api{
 server {
     listen 80;
     location / {
-        proxy_pass http://frontend;
+        proxy_pass http://client;
     }
     location /api {
         # /api/...　api以降のpathを自動的にchop offしてしまう→rewriteルールを追加
