--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,6 +10,14 @@ server {
     location / {
         proxy_pass http://client;
     }
+
+    location /sockjs-node {
+        proxy_pass http://client;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+    }
+
     location /api {
         # /api/...　api以降のpathを自動的にchop offしてしまう→rewriteルールを追加
         rewrite /api/(.*) /$1 break;
