--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ after_success:
   - docker push shotaromatsuya/multi-server
   - docker push shotaromatsuya/multi-worker
 
-# deployment for elastic beanstalk
+# deployment for elastic beanstalk !
 deploy:
   provider: elasticbeanstalk
   region: 'ap-northeast-1'
